--- a/package.json
+++ b/package.json
@@ -1,18 +1,13 @@
 {
-  "name": "BookLocal",
-  "version": "1.0.0",
-  "description": "NuRealtor Real Estate Project",
-  "main": "Gruntfile.js",
-  "directories": {
-    "test": "tests"
+  "name": "node-js-allakarte",
+  "version": "0.1.5",
+  "description": "app   to create rest api",
+  "main": "index.js",
+  "scripts": {
+    "start": "node app.js"
   },
-  "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-connect": "^0.11.2",
-    "grunt-contrib-jshint": "^0.11.3",
-    "grunt-contrib-nodeunit": "^0.4.1",
-    "grunt-contrib-watch": "^0.6.1",
-     "crypto": "~0.0.3",
+  "dependencies": {
+    "crypto": "~0.0.3",
     "express": "~3.4.0",
     "express-session": "~1.12.1",
     "jwt-simple": "~0.3.1",
@@ -26,10 +21,17 @@
     "path": "~0.12.7",
     "nodemailer": "~1.10.0"
   },
-  "scripts": {
-    "test": "grunt test",
-    "start": "grunt server"
+  "engines": {
+    "node": "4.1.1"
   },
-  "author": "Developer TKS",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/heroku/node-js-getting-started"
+  },
+  "keywords": [
+    "node",
+    "heroku",
+    "express"
+  ],
   "license": "MIT"
 }
