--- a/package.json
+++ b/package.json
@@ -24,6 +24,27 @@
   "engines": {
     "node": "4.1.1"
   },
+  	"devDependencies": {
+		"mocha": "~1.12.1",
+		"should": "~1.2.2",
+		"supertest": "~0.7.1",
+		"gulp": "^3.9.0",
+		"gulp-browserify": "^0.5.1",
+		"gulp-coffee": "^2.3.1",
+		"gulp-compass": "^2.1.0",
+		"gulp-concat": "^2.6.0",
+		"gulp-connect": "^2.3.1",
+		"gulp-htmlmin": "^1.3.0",
+		"gulp-if": "^2.0.0",
+		"gulp-jsonminify": "^1.0.0",
+		"gulp-ruby-sass": "^2.0.6",
+		"gulp-uglify": "^1.5.1",
+		"gulp-util": "^3.0.7",
+		 "gulp-minify-css" : "*",
+		"jquery": "^2.1.4",
+		"mustache": "^2.2.1",
+		"util": "^0.10.3"
+	},
   "repository": {
     "type": "git",
     "url": "https://github.com/heroku/node-js-getting-started"
